--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jul 27 18:20:54 2002  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: fix deps.
+
+	* listplugins.sh: generate deps on .c files for .enums files.
+
 Tue Jul 23 08:04:20 2002  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: remove unused fldbsepattern.c from build list.
