--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,5 +1,6 @@
 RELEASE:
 - help: QuickStart-Samples, QuickStart-Synthesis, QuickStart-Songs
+- provide a sample song
 
 FEATURES:
 - Module Menu: add EDIT
