--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug  8 18:14:48 2002  Tim Janik  <timj@gtk.org>
+
+	* gslmagic.c (magic_create): fix out-of-bound string access.
+
 Wed Aug  7 11:20:59 2002  Tim Janik  <timj@gtk.org>
 
 	* toyprof.h: flag conditional enum ToyprofBehaviour to be skipped by
