--- a/docs/quickstart.texi
+++ b/docs/quickstart.texi
@@ -6,13 +6,15 @@
 
 @include teximacros.texi
 
-@titlepage
-@title @beastbse Quick Start Guide
-@author Tim Janik
+@majorheading @beastbse Quick Start Guide
+@center Tim Janik
+@*
 This guide attempts to give a few very brief hints for new users,
 in order to get started with the most basic tasks that can be
 accomplished with @beast{}.
-@end titlepage
+@*
+
+@toc
 
 @chapter First Start At Synthesis
 
